Add OpenGraph Meta Tags

--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
     <meta name="description" content="Профессиональное управление репутацией в интернете. Размещение отзывов, удаление негатива, SERM. Работаем с бизнесом и частными лицами. Гарантия результата." />
     <meta name="keywords" content="управление репутацией, SERM, отзывы, репутация компании, удаление негатива, онлайн репутация" />
     <meta name="author" content="Avi Reputation" />
+    
+    <!-- OpenGraph Meta Tags -->
     <meta property="og:title" content="Avi Reputation - Управление репутацией в интернете" />
     <meta property="og:description" content="Профессиональное управление репутацией в интернете. Размещение отзывов, удаление негатива, SERM. Работаем с бизнесом и частными лицами." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://avireputation.com" />
+    <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:site_name" content="Avi Reputation" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Avi Reputation - Управление репутацией в интернете" />
+    <meta name="twitter:description" content="Профессиональное управление репутацией в интернете. Размещение отзывов, удаление негатива, SERM." />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg" />
+    
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://applesocial.s3.amazonaws.com" />
+    <link rel="canonical" href="https://avireputation.com" />
     <title>Avi Reputation - Управление репутацией в интернете</title>
   </head>
   <body>
