Update canonical URL

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Avi Reputation - Управление репутацией в интернете" />
     <meta property="og:description" content="Профессиональное управление репутацией в интернете. Размещение отзывов, удаление негатива, SERM. Работаем с бизнесом и частными лицами." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://avireputation.com" />
+    <meta property="og:url" content="https://www.avireputation.ru" />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -39,7 +39,7 @@
     
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://applesocial.s3.amazonaws.com" />
-    <link rel="canonical" href="https://avireputation.com" />
+    <link rel="canonical" href="https://www.avireputation.ru" />
     <title>Avi Reputation - Управление репутацией в интернете</title>
   </head>
   <body>
